clusters/k3s/home-automation/zigbee2mqtt/zigbee2mqtt.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: z2mqtt.home.elkiaer.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  name: http
  tls:
    - hosts:
        - z2mqtt.home.elkiaer.net
      secretName: net-elkiaer-home-z2mqtt
